update photo score
